--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alicia Sabatino # your name (or website title) here
-logo: "/images/logo.png?raw=true" # your photo (or logo) here
+logo: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSZp6uilhfGZcD4rUapVCyZq7VQT5vxkTv34vax2ZGyQC2fp2E&s" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   First description 
   <br><br>
