--- a/_config.yml
+++ b/_config.yml
@@ -1,9 +1,9 @@
 title: Alicia Sabatino # your name (or website title) here
-logo: "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQSZp6uilhfGZcD4rUapVCyZq7VQT5vxkTv34vax2ZGyQC2fp2E&s" # your photo (or logo) here
+logo: "https://i.etsystatic.com/iusa/512785/68241563/iusa_400x400.68241563_91hl.jpg?version=0" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  First description 
+  Alicia's Github 
   <br><br>
-  Second description 
+  Environmental Science and Geography Major and Computer Science minor 
   <br><br>
   <a href="https://www.linkedin.com/in/example/">View My LinkedIn Profile</a> 
   
