--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alicia Sabatino # your name (or website title) here
-logo: "/images/ENw5hF1UUAAx_5a.png/" # your photo (or logo) here
+logo: "/images/ENw5hF1UUAAx_5a.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Alicia's Github 
   <br><br>
