--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Alicia Sabatino # your name (or website title) here
 logo: "/images/ENw5hF1UUAAx_5a.png" # your photo (or logo) here
+<link rel="shortcut icon" href="https://thumbs.gfycat.com/AgreeableBowedBluebird.webp" /> 
 description: > # your text below (remove <br> elements if you don't need line breaks)
   Alicia's Github 
   <br><br>
