--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,11 @@
 title: Alicia Sabatino # your name (or website title) here
-logo: "/images/ENw5hF1UUAAx_5a.png" # your photo (or logo) here
+logo: "/images/me.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Alicia's Github 
   <br><br>
-  Environmental Science and Geography Major and Computer Science minor 
+  Environmental Science and Geography Major and Computer Science minor at the University of Baltimore Maryland
   <br><br>
+  I have worked in the Anthropogenic Landscape Ecology lab and conducted bioacoustics research and contributed to the processing of remotely sensed images. 
+  I am currently working in the Mapping Capital lab at UMBC and contributing to projects that analyze geographies of inequity. 
   <a href="https://www.twitter.com/nerdjpg">View My Twitter</a> 
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
