--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   I have worked in the Anthropogenic Landscape Ecology lab and conducted bioacoustics research and contributed to the processing of remotely sensed images. 
   I am currently working in the Mapping Capital lab at UMBC and contributing to projects that analyze geographies of inequity. 
-  <br>
-  <a href="https://www.twitter.com/nerdjpg">View My Twitter</a> 
+  <br><br>
+  <a href="https://www.twitter.com/nerdjpg">Twitter</a>  
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
