--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Alicia Sabatino # your name (or website title) here
-logo: "/images/me2.png" # your photo (or logo) here
+logo: "/images/alicia_graphic.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
   Environmental Science and Geography Major and Computer Science minor at the University of Maryland, Baltimore County.
