--- a/_config.yml
+++ b/_config.yml
@@ -2,12 +2,12 @@ title: Alicia Sabatino # your name (or website title) here
 logo: "/images/alicia_graphic.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
-  Environmental Science and Geography Major and Computer Science minor at the University of Maryland, Baltimore County.
+  I am currently in my final year of my Master of Science in Geography and Environmental Systems at University of Maryland, Baltimore County (UMBC). UMBC is also where I earned my Bachelor of Science in Geography in Environmental Science with a Computer Science minor as well as a GIS Certificate.
   <br><br>
   I have worked in the Anthropogenic Landscape Ecology lab and conducted bioacoustics research and contributed to the processing of remotely sensed images. 
   I am currently working in the Mapping Capital lab at UMBC and contributing to projects that analyze geographies of inequity. 
 
   <br><br>
-  <a href="https://www.twitter.com/nerdjpg">Twitter</a>  
+  <a href="https://www.twitter.com/aliciacsabatino">Twitter</a>  
 theme: jekyll-theme-minimal
 google_analytics: UA-000000-0 # your Google Analytics tracking ID here
