--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,7 @@ description: > # your text below (remove <br> elements if you don't need line br
   <br><br>
   I am currently in my final year of my Master of Science in Geography and Environmental Systems at University of Maryland, Baltimore County (UMBC). UMBC is also where I earned my Bachelor of Science in Geography in Environmental Science with a Computer Science minor as well as a GIS Certificate.
   <br><br>
-  I have worked in the Anthropogenic Landscape Ecology lab and conducted bioacoustics research and contributed to the processing of remotely sensed images. 
-  I am currently working in the Mapping Capital lab at UMBC and contributing to projects that analyze geographies of inequity. 
+  During my graduate studies I have worked as a GIS consulant, cartographer, GIS research assistant, web content integration assistant, as a teaching assistant for a GIS class and a as GIS lab managment assistant.
 
   <br><br>
   <a href="https://www.twitter.com/aliciacsabatino">Twitter</a>  
