--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Alicia Sabatino # your name (or website title) here
 logo: "/images/alicia_graphic.png" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
   <br><br>
-  I am currently in my final year of my Master of Science in Geography and Environmental Systems at University of Maryland, Baltimore County (UMBC). UMBC is also where I earned my Bachelor of Science in Geography in Environmental Science with a Computer Science minor as well as a GIS Certificate.
+  I am currently in my final year of my Master of Science in Geography and Environmental Systems at University of Maryland, Baltimore County (UMBC) where I earned my BS in Geography in Environmental Science with a Computer Science minor and GIS Certificate.
   <br><br>
   During my graduate studies I have worked as a GIS consulant, cartographer, GIS research assistant, web content integration assistant, as a teaching assistant for a GIS class and a as GIS lab managment assistant.
 
